# quack-de

./: .gitignore  .gitmodules  README.md  TODO.md  dev  requirements.txt
scripts/: apt.sh  buildservice.sh  hotload.sh  install.sh  packages.sh
service/: CMakeLists.txt  Color.h  Fire2012.cpp  Fire2012.h  LEDFunctions.h  LEDMath8.h  Palette.h  PixelStrip.cpp  PixelStrip.h  ThemeRegistry.cpp  ThemeRegistry.h  main.cpp  testclient.py
service/themes/: Epilepsy.cpp  Epilepsy.h  Fire2012.cpp  Fire2012.h  Jerry.cpp  Jerry.h  Pacifica.cpp  Pacifica.h  Rainbow.cpp  Rainbow.h  Theme.h  Twinkle.cpp  Twinkle.h
src/: .env  API.py  App.py  Configurator.py  LEDLoops.py  LEDService.py  LEDThemes.py  main.py  window.py
src/ledthemes/: Epilepsy.py
src/lib/: CommandUI.py  Configurator.py  CustomWidgets.py  DevChecks.py  Dialogs.py  LEDLoop.py  Navigation.py  Notifier.py  PidWrapper.py  ProcessWrapper.py  QuackApp.py  QuackColorPicker.py  SwappableUI.py  Themes.py
src/lib/led/: LEDLoop.py  LEDLoopSettings.py  LEDTheme.py  LEDThemeSettings.py  SocketLED.py  WSExtensions.py
src/pages/: About.py  Calendar.py  Debug.py  Home.py  HomeAssistant.py  LEDs.py  Settings.py  VirtualLED.py  Weather.py
src/pages/ephemeral/: About.py  Lock.py  StatImg.py  YesNoDialog.py
